--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,15 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:padding="10dp"
+        android:gravity="center"
+        android:background="#eeeeee"
+        android:text="待绑定的原料列表"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ry"
         android:layout_width="match_parent"
