--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,26 @@
         android:layout_height="wrap_content"
         android:text="扫描成品" />
 
-    <TextView
-        android:id="@+id/tv_main"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:padding="12dp" />
+        android:layout_height="160dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_main"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:scrollbars="horizontal" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ry_binded"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,15 +42,15 @@
         <Button
             android:id="@+id/btn_appendix_scan"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="扫描原料" />
 
         <Button
             android:id="@+id/btn_submit"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="提交" />
 
     </LinearLayout>
@@ -43,16 +58,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:padding="10dp"
-        android:gravity="center"
         android:background="#eeeeee"
-        android:text="待绑定的原料列表"/>
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="待绑定的原料列表"
+        android:textSize="16sp" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/ry"
+        android:id="@+id/ry_add"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent" />
 
 </LinearLayout>
