--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:padding="10dp"
-        android:scrollbars="horizontal" />
+        android:scrollbars="vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
