--- a/app/src/main/res/layout/item_appendix.xml
+++ b/app/src/main/res/layout/item_appendix.xml
@@ -19,7 +19,7 @@
         android:id="@+id/tv_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="123"
+        android:text=""
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toRightOf="@id/tv_detail"
         app:layout_constraintRight_toRightOf="parent" />
