--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,19 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="color_99CC00">#99CC00</color>
+    <color name="color_429FFF">#429FFF</color>
+    <color name="color_6D81FD">#6D81FD</color>
+    <color name="color_A68FFE">#A68FFE</color>
+    <color name="color_E78FFE">#E78FFE</color>
+    <color name="color_F4F4F4">#F4F4F4</color>
+    <color name="color_15C160">#15C160</color>
+    <color name="color_40CE94">#40CE94</color>
+    <color name="color_FBDA59">#FBDA59</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="black_333333">#333333</color>
+    <color name="divide_EEEEEE">#EEEEEE</color>
+    <color name="black_666666">#666666</color>
+    <color name="black_F6FAFF">#F6FAFF</color>
 
 </resources>
