--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,6 @@
     <color name="divide_EEEEEE">#EEEEEE</color>
     <color name="black_666666">#666666</color>
     <color name="black_F6FAFF">#F6FAFF</color>
+    <color name="gray_999999">#999999</color>
 
 </resources>
