--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="color_15C160">#15C160</color>
     <color name="color_40CE94">#40CE94</color>
     <color name="color_FBDA59">#FBDA59</color>
+    <color name="color_FBCA59">#FBCA59</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="black_333333">#333333</color>
